--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <!-- <router-outlet></router-outlet> -->
   <app-heroes></app-heroes>
+  <app-messages></app-messages>
 </div>
