--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,5 +1,10 @@
-<form class="example-form">
-    <mat-form-field class="example-full-width">
-      <input matInput placeholder="what do you want to eat">
-    </mat-form-field>
+<form class="full-width">
+  <mat-grid-list cols="10" rowHeight="100px">
+    <mat-grid-tile colspan="7">
+      <mat-form-field class="full-width">
+        <input matInput placeholder="what do you want to eat">
+      </mat-form-field>
+    </mat-grid-tile>
+    <mat-grid-tile colspan="3"><button mat-raised-button color="primary">Search</button></mat-grid-tile>
+  </mat-grid-list>
 </form>
