use card to show promotion store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,13 @@
   <app-location-bar></app-location-bar>
   <app-search-box></app-search-box>
   <app-category></app-category>
+  <mat-divider></mat-divider>
   <app-promotion></app-promotion>
 </div>
+
+<!-- <mat-tab-group headerPosition='below'>
+  <mat-tab label="First"> Content 1 </mat-tab>
+  <mat-tab label="Second"> Content 2 </mat-tab>
+  <mat-tab label="Third"> Content 3 </mat-tab>
+  <mat-tab label="MY"> Content 3 </mat-tab>
+</mat-tab-group> -->
