--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="mat-app-background basic-container">
   <app-location-bar></app-location-bar>
+  <mat-divider></mat-divider>
   <app-search-box></app-search-box>
+  <mat-divider></mat-divider>
   <app-category></app-category>
   <mat-divider></mat-divider>
   <app-promotion></app-promotion>
