--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,5 +1,5 @@
 <form class="full-width">
-  <mat-grid-list cols="10" rowHeight="100px">
+  <mat-grid-list cols="10">
     <mat-grid-tile colspan="7">
       <mat-form-field class="full-width">
         <input matInput placeholder="what do you want to eat">
