navigator.geolocation.getCurrentPosition

--- a/src/app/location-bar/location-bar.component.html
+++ b/src/app/location-bar/location-bar.component.html
@@ -1,4 +1,9 @@
-<div id="container">
+<mat-toolbar color="primary" id="container">
+    <mat-icon aria-hidden="false">my_location</mat-icon>
+    <div>{{lbsService.address}}</div>
+</mat-toolbar>
+
+<!-- <div id="container">
     <mat-icon aria-hidden="false">my_location</mat-icon>
     <div>London</div>
-</div>
+</div> -->
