--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,7 @@
   <mat-divider></mat-divider>
   <app-search-box></app-search-box>
   <mat-divider></mat-divider>
-  <app-category></app-category>
-  <mat-divider></mat-divider>
-  <app-promotion></app-promotion>
+  <router-outlet></router-outlet>
 </div>
 
 <!-- <mat-tab-group headerPosition='below'>
