--- a/src/app/store-bar/store-bar.component.html
+++ b/src/app/store-bar/store-bar.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card routerLink="/store/{{store.name}}">
     <img mat-card-image [src]="store.image">
     <mat-card-content>
         <p>{{store.name}}</p>
